# machine-learning-project

./: Bike_Sharing.py  README.md
bike_sharing_ml/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
bike_sharing_ml/config/: config.yaml
bike_sharing_ml/models/day/: metrics.json  production_metadata.json
bike_sharing_ml/models/hour/: lag_experiment.json  metrics.json  production_metadata.json
bike_sharing_ml/src/bike_sharing/: config.py
bike_sharing_ml/src/bike_sharing/apps/: api.py  dashboard.py
bike_sharing_ml/src/bike_sharing/data/: loader.py  preprocessing.py
bike_sharing_ml/src/bike_sharing/features/: build_features.py
bike_sharing_ml/src/bike_sharing/models/: evaluate.py  lag_experiment.py  predict.py  train.py
bike_sharing_ml/src/bike_sharing/utils/: visualization.py
bike_sharing_ml/tests/: test_api.py  test_data.py  test_features.py  test_models.py  test_visualization.py
docs/superpowers/plans/: 2026-07-22-bike-sharing-ml-productionization.md
docs/superpowers/specs/: 2026-07-22-bike-sharing-ml-productionization-design.md
