[project]
name = "bike-sharing-ml"
version = "0.1.0"
description = "Pipeline production-grade per la previsione della domanda di bike sharing"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "catboost>=1.2",
    "optuna>=3.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "streamlit>=1.33",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
